애플 홈페이지 VUE로 구현하기

--- a/src/assets/scss/argon.scss
+++ b/src/assets/scss/argon.scss
@@ -93,6 +93,11 @@
 @import "custom/section.scss";
 @import "custom/type.scss";
 
+
+// 추가
+@import "style/phone.scss";
+
+
 // Vendor
 
 @import "custom/vendor/flatpickr.scss";
